# I-Genius

./: .dockerignore  .env.template  .gitignore  .netrc  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README_VULCANEXUS_MACHINES.md  ROBOT_ZIP_STRUCTURE.md  SVO_ZIP_STRUCTURE.md  analyze_traj.py  azure-pipelines-nextdev.yml  blob_source.py  check_files.py  check_svo.py  convert_openarm.py  docker-compose.fiware.yml  docker-compose.yml  dump_blob.py  flatten_svo.py  get_blob.py  inspect_npy.py  inspect_raw_data.py  kit_blob.txt  main.py  output.txt  prepare_svo_import.py  pyproject.toml  supervisord.conf
.streamlit/: config.toml
Fiware/: README.md
data/Common/robot_models/openarm/: _sanitized_openarm.urdf  animations.json  config.json  openarm.urdf
data/Common/robot_models/urdf/: _sanitized_comau_ns16hand.urdf  animations.json  config.json
docs/: 1. Integration_with_mywai_2_1.md  2. Integration_with_mywai_3.md  arise_vulcanexus_migration_checklist.md  edge_receiver_contract.md  vulcanexus_cross_machine_test.md
scripts/vulcanexus/: README.md  comau_backend_example.sh  ddsrouter_cloud.template.yaml  ddsrouter_edge.template.yaml  docker_publish_traj.sh  docker_run_ddsrouter.sh  docker_run_fastdds_discovery_server.sh  docker_run_fastdds_discovery_server_xml.sh  docker_subscribe_traj.sh  docker_wait_for_status.sh  edge_executor.service.example  edge_receive_posearray.py  edge_receiver.service.example  fastdds_wan_tcp_client.template.xml  fastdds_wan_tcp_server.template.xml  render_ddsrouter_wan_config.sh  render_fastdds_wan_tcp_profile.sh  ros2_sub_echo.sh  run_edge_executor.sh  run_edge_receiver.sh  show_network_info.sh  traj_pose_array_executor.py  traj_pose_array_pub.py  traj_pose_array_sub.py  traj_status_sub.py
src/: .netrc
src/scripts/linux/: create_netrc.sh  docker_build.sh
src/scripts/windows/: create_netrc.ps1  docker_build.ps1
src/streamlit_template/: __init__.py
src/streamlit_template/auth/: __init__.py  mywai_auth.py
src/streamlit_template/components/sync_viewer/: __init__.py
src/streamlit_template/core/BAG/: 00_extract_bag_frames.py  01_extract_hand_trajectory.py  02_smooth_hand_trajectory.py  03_extract_object_trajectory.py  04_smooth_object_trajectory.py  05_estimate_grasp_from_hand.py  07_gmm_segmentation.py  08_extract_skill_phases.py  09_learn_dmp.py  10_test_dmp_reproduction.py  11_adapt_dmp.py  12_test_skill_reuse.py  99_run_full_pipeline.py  _paper_config.py  _paper_utils.py
src/streamlit_template/core/Common/: config.py  data_cleanup.py  detection_adapter.py  estimate_monocular_depth.py  mywai_api.py  object_detector.py  robot_playback.py
src/streamlit_template/core/Generic/: extract_frames.py  extract_svo_frames_index.py  generate_dmp.py  generate_dmp_xyz.py  hand_detection.py  object_detection.py  realsense_bag_extract.py  trajectory_extraction.py
src/streamlit_template/core/SVO/: 01_extract_hand_trajectory.py  03_extract_object_trajectory.py  04_estimate_grasp_from_hand.py  05_reconstruct_object_trajectory.py  (+21 more)
src/streamlit_template/new_ui/: __init__.py
src/streamlit_template/ui/: __init__.py  components.py  helpers.py  main_ui.py  pages.py  pipeline_ui.py  robot_sidebar.py  sidebar_ui.py  stepper_bar.py  upload_ui.py  viewer_ui.py
tutorials/: README.md  custom_robot_zip.md  svo_zip_workflow.md
(+50 files in other folders)
